--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,7 +9,7 @@
     "typed-router.d.ts",
     "shims.d.ts"
   ],
-  "exclude": ["src/**/__tests__/*"],
+  "exclude": ["src/**/__tests__/*", "**/node_modules/**", "**/dist/**"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
