--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "@vueuse/head": "^1.1.26",
+    "ofetch": "^1.3.3",
     "pinia": "^2.0.35",
     "vee-validate": "^4.11.6",
     "vue": "^3.3.0",
