--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "pg-vite",
+  "name": "pg-vue",
   "version": "0.0.0",
-  "homepage": "https://pg-vite.netlify.app",
+  "homepage": "https://pg-vue-css.netlify.app",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pinegrow/pg-vite.git"
+    "url": "https://github.com/pinegrow/pg-vue.git"
   },
   "scripts": {
     "dev": "vite",
     "now": "npm run build && npm run preview",
     "lighthouse:dev": "npx unlighthouse --no-cache --site http://localhost:5173",
-    "lighthouse": "npx unlighthouse --no-cache --site https://pg-vite.netlify.app",
+    "lighthouse": "npx unlighthouse --no-cache --site https://pg-vue-css.netlify.app",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
