--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "~5.0.4",
     "unocss": "^0.57.2",
     "unplugin-auto-import": "^0.15.3",
