--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,7 +19,7 @@
       "~/*": ["src/*"],
       "~~/*": ["*"]
     },
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "types": ["vite-plugin-vue-layouts/client"],
     "allowJs": true,
     "strict": false
